// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should MyListButton render correctly If film is favorite 1`] = `
<a
  className="btn btn--list movie-card__button"
  href="/"
  onClick={[Function]}
  type="button"
>
  <svg
    height="20"
    viewBox="0 0 19 20"
    width="19"
  >
    <use
      xlinkHref="#in-list"
    />
  </svg>
  <span>
    My list
  </span>
</a>
`;

exports[`Should MyListButton render correctly If film is not favorite 1`] = `
<a
  className="btn btn--list movie-card__button"
  href="/"
  onClick={[Function]}
  type="button"
>
  <svg
    height="20"
    viewBox="0 0 19 20"
    width="19"
  >
    <use
      xlinkHref="#add"
    />
  </svg>
  <span>
    My list
  </span>
</a>
`;
